intergrate react-navigation

--- a/FM_RN/package.json
+++ b/FM_RN/package.json
@@ -6,6 +6,7 @@
     "preinstall": "cd ../core && npm install",
     "postinstall": "cd ../core && npm run build",
     "start": "node node_modules/react-native/local-cli/cli.js start",
+    "start-reset-cache": "react-native start --reset-cache",
     "test": "jest",
     "ios": "react-native run-ios --simulator \"iPhone X\"",
     "android": "react-native run-android"
@@ -15,6 +16,8 @@
     "react": "16.6.3",
     "react-native": "0.58.6",
     "react-native-gesture-handler": "^1.1.0",
+    "react-native-vector-icons": "^6.3.0",
+    "react-native-video": "^4.4.0",
     "react-navigation": "^3.3.2",
     "react-redux": "^6.0.1",
     "tslib": "^1.9.3"
@@ -22,6 +25,7 @@
   "devDependencies": {
     "@types/react": "^16.8.6",
     "@types/react-native": "^0.57.38",
+    "@types/react-native-vector-icons": "^4.6.4",
     "@types/react-navigation": "^3.0.4",
     "@types/react-redux": "^7.0.2",
     "babel-core": "^7.0.0-bridge.0",
